--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
            width: 90vw;
            margin: 0vw 5vw;
         }
+
+        table {
+            width: 100%;
+        }
     </style>
 
     <body>
-        <h1>This is a Heading 1</h1>
+        <h1>CSC 2431 GitHub IO Page - Nahome Yohannes</h1>
         <p>This is a paragraph describing the way I like to code. I code in the morning, I code in the afternoon, but I like to code more at night. The werewolves don't come at night when I code; my superpower grows, and as Naruto helps me, my code becomes powerful like a lightsaber. Gundam robots come out of my code as I solve the mysteries of algorithms, dungeons, and dragons.</p>
         <table>
             <tr>
