--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <html>
-    <head>
-        <title>Github io page - SPU DS II</title>
-    </head>
-    <style>
-        table, table th, table td {
-            text-align: start;
-            border: 1px solid black;
-        }
 
-        body { 
-           width: 90vw;
-           margin: 0vw 5vw;
-        }
+<head>
+    <title>Github io page - SPU DS II</title>
+</head>
+<style>
+    table,
+    table th,
+    table td {
+        text-align: start;
+        border: 1px solid black;
+    }
 
-        table {
-            width: 100%;
-        }
-    </style>
+    body {
+        width: 90vw;
+        margin: 0vw 5vw;
+    }
 
-    <body>
-        <h1>CSC 2431 GitHub IO Page - Nahome Yohannes</h1>
-        <p>This is a paragraph describing the way I like to code. I code in the morning, I code in the afternoon, but I like to code more at night. The werewolves don't come at night when I code; my superpower grows, and as Naruto helps me, my code becomes powerful like a lightsaber. Gundam robots come out of my code as I solve the mysteries of algorithms, dungeons, and dragons.</p>
-        <table>
-            <tr>
-                <th>Course Number</th>
-                <th>Course Name</th>
-            </tr>
-            <tr>
-                <td>CSC 2330</td>
-                <td>Data Structures and Programming</td>
-            </tr>
-            <tr>
-                <td>Math 1234</td>
-                <td>Calculus I</td>
-            </tr>
-        </table>
-    </body>
+    table {
+        width: 100%;
+    }
+</style>
+
+<body>
+    <h1>CSC 2431 GitHub IO Page - Nahome Yohannes</h1>
+    <p>This is a paragraph describing the way I like to code. I code in the morning, I code in the afternoon, but I like
+        to code more at night. The werewolves don't come at night when I code; my superpower grows, and as Naruto helps
+        me, my code becomes powerful like a lightsaber. Gundam robots come out of my code as I solve the mysteries of
+        algorithms, dungeons, and dragons. <b>The table below shows the list of courses I'm taking at SPU this
+            quarter</b></p>
+    <table>
+        <tr>
+            <th>Course Number</th>
+            <th>Course Name</th>
+            <th>Quarter</th>
+        </tr>
+        <tr>
+            <td>CSC 2431</td>
+            <td>Data Structures II</td>
+            <td>Spring 2025</td>
+        </tr>
+        <tr>
+            <td>CSC 3221</td>
+            <td>Netcentric Computing</td>
+            <td>Spring 2025</td>
+        </tr>
+        <tr>
+            <td>CSC 3150</td>
+            <td>Systems Design</td>
+            <td>Spring 2025</td>
+        </tr>
+        <tr>
+            <td>UCOR 2000</td>
+            <td>The Emergence of the Modern Global Systems</td>
+            <td>Spring 2025</td>
+        </tr>
+    </table>
+</body>
+
 </html>
